--- a/environment.yml
+++ b/environment.yml
@@ -1,150 +1,96 @@
 name: attack
 channels:
-  - conda-forge
   - defaults
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+  - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - absl-py=2.1.0=pyhd8ed1ab_1
-  - aiohttp=3.7.4.post0=py310h6acc77f_1
-  - async-timeout=3.0.1=py_1000
-  - attrs=25.1.0=pyh71513ae_0
+  - abseil-cpp=20230802.0=h313beb8_2
+  - absl-py=2.1.0=py310hca03da5_0
   - blas=1.0=openblas
-  - blinker=1.9.0=pyhff2d567_0
-  - brotli-python=1.0.9=py310hd8f1fbe_7
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2025.1.31=hbcca054_0
-  - cachetools=5.5.1=pyhd8ed1ab_0
-  - certifi=2025.1.31=py310h06a4308_0
-  - cffi=1.15.0=py310h0fdd8cc_0
-  - chardet=4.0.0=py310hff52083_3
-  - charset-normalizer=3.4.1=pyhd8ed1ab_0
-  - click=8.1.8=pyh707e725_0
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - contourpy=1.3.1=py310hdb19cb5_0
-  - cryptography=43.0.3=py310h7825ff9_1
-  - cudatoolkit=11.8.0=h6a678d5_0
+  - bottleneck=1.4.2=py310hbda83bc_0
+  - brotli-python=1.0.9=py310h313beb8_9
+  - bzip2=1.0.8=h80987f9_6
+  - c-ares=1.19.1=h80987f9_0
+  - ca-certificates=2025.2.25=hca03da5_0
+  - certifi=2025.4.26=py310hca03da5_0
+  - cffi=1.17.1=py310h3eb5a62_1
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - contourpy=1.3.1=py310h48ca7d4_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
-  - expat=2.6.4=h6a678d5_0
-  - fontconfig=2.14.1=h55d465d_3
-  - fonttools=4.55.3=py310h5eee18b_0
-  - freetype=2.12.1=h4a9f257_0
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - google-auth=2.38.0=pyhd8ed1ab_0
-  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-  - grpcio=1.62.2=py310h6a678d5_0
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - h2=4.2.0=pyhd8ed1ab_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=73.1=h6a678d5_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib-metadata=8.6.1=pyha770c72_0
-  - jpeg=9e=h5eee18b_3
-  - kiwisolver=1.4.8=py310h6a678d5_0
-  - krb5=1.20.1=h143b758_1
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - libabseil=20240116.2=cxx17_h6a678d5_0
-  - libblas=3.9.0=16_linux64_openblas
-  - libcblas=3.9.0=16_linux64_openblas
-  - libclang=14.0.6=default_hc6dbbc7_2
-  - libclang13=14.0.6=default_he11475f_2
-  - libcups=2.4.2=h2d74bed_1
-  - libcurl=8.11.1=hc9e6f67_0
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_1
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=13.2.0=h69a702a_0
-  - libgfortran5=13.2.0=ha4646dd_0
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=11.2.0=h1234567_1
-  - libgrpc=1.62.2=h2d74bed_0
-  - libiconv=1.16=h5eee18b_3
-  - liblapack=3.9.0=16_linux64_openblas
-  - libllvm14=14.0.6=hecde1de_4
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libopenblas=0.3.21=h043d6bf_0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=17.2=hdbd6064_0
-  - libprotobuf=4.25.3=he621ea3_0
-  - libssh2=1.11.1=h251f7ec_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libuuid=1.41.5=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h097e994_2
-  - libxml2=2.13.5=hfdd30dd_0
-  - lz4-c=1.9.4=h6a678d5_1
-  - markdown=3.6=pyhd8ed1ab_0
-  - markupsafe=2.1.1=py310h5764c6d_1
-  - matplotlib=3.10.0=py310h06a4308_0
-  - matplotlib-base=3.10.0=py310hbfdbfaf_0
-  - multidict=6.0.2=py310h5764c6d_1
-  - mysql=8.4.0=h29a9f33_1
-  - ncurses=6.4=h6a678d5_0
-  - numpy-base=1.26.4=py310h8a23956_0
-  - oauthlib=3.2.2=pyhd8ed1ab_1
-  - openldap=2.6.4=h42fbc30_0
-  - openssl=3.0.15=h5eee18b_0
-  - packaging=24.2=py310h06a4308_0
-  - pcre2=10.42=hebb0a14_1
-  - pip=25.0=py310h06a4308_0
-  - ply=3.11=py310h06a4308_0
-  - protobuf=4.25.3=py310he36ed58_1
-  - pyasn1=0.6.1=pyhd8ed1ab_2
-  - pyasn1-modules=0.4.1=pyhd8ed1ab_1
-  - pycparser=2.22=pyh29332c3_1
-  - pyjwt=2.10.1=pyhd8ed1ab_0
-  - pyopenssl=25.0.0=pyhd8ed1ab_0
-  - pyparsing=3.2.0=py310h06a4308_0
-  - pyqt=5.15.10=py310h6a678d5_1
-  - pyqt5-sip=12.13.0=py310h5eee18b_1
-  - pysocks=1.7.1=pyha55dd90_7
-  - python=3.10.16=he870216_1
-  - python-dateutil=2.9.0post0=py310h06a4308_2
-  - python_abi=3.10=2_cp310
-  - pyu2f=0.1.5=pyhd8ed1ab_1
-  - qt-main=5.15.2=hb6262e9_12
-  - re2=2022.04.01=h27087fc_0
-  - readline=8.2=h5eee18b_0
-  - requests=2.32.3=pyhd8ed1ab_1
-  - requests-oauthlib=2.0.0=pyhd8ed1ab_1
-  - rsa=4.9=pyhd8ed1ab_1
-  - setuptools=75.8.0=py310h06a4308_0
-  - sip=6.7.12=py310h6a678d5_1
-  - six=1.17.0=pyhd8ed1ab_0
-  - sqlite=3.45.3=h5eee18b_0
-  - tensorboard=2.10.1=pyhd8ed1ab_0
-  - tensorboard-data-server=0.6.1=py310h52d8a92_0
-  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-  - tk=8.6.14=h39e8969_0
-  - tomli=2.0.1=py310h06a4308_0
-  - tornado=6.4.2=py310h5eee18b_0
-  - tqdm=4.66.1=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - tzdata=2025a=h04d1e81_0
-  - unicodedata2=15.1.0=py310h5eee18b_1
-  - urllib3=2.3.0=pyhd8ed1ab_0
-  - werkzeug=3.1.3=pyhd8ed1ab_1
-  - wheel=0.45.1=py310h06a4308_0
-  - xz=5.4.6=h5eee18b_1
-  - yarl=1.7.2=py310h5764c6d_2
-  - zipp=3.21.0=pyhd8ed1ab_1
-  - zlib=1.2.13=h5eee18b_1
-  - zstandard=0.23.0=py310h2c38b39_1
-  - zstd=1.5.6=hc292b87_0
-  - pip:
-      - numpy==2.2.2
-      - pillow==11.1.0
-      - torch==1.13.1+cu116
-      - torchaudio==0.13.1+cu116
-      - torchvision==0.14.1+cu116
-prefix: /Wang-ds/ian/software/anaconda/envs/attack
+  - fonttools=4.55.3=py310h80987f9_0
+  - freetype=2.13.3=h47d26ad_0
+  - future=1.0.0=py310hca03da5_0
+  - grpc-cpp=1.48.2=hc60591f_4
+  - grpcio=1.48.2=py310hc60591f_4
+  - gtest=1.14.0=h48ca7d4_1
+  - idna=3.7=py310hca03da5_0
+  - jpeg=9e=h80987f9_3
+  - kiwisolver=1.4.8=py310h313beb8_0
+  - lcms2=2.16=he26ebf3_1
+  - lerc=4.0.0=h313beb8_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.22=h80987f9_0
+  - libffi=3.4.4=hca03da5_1
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h80987f9_0
+  - libprotobuf=3.20.3=h514c7bf_0
+  - libsqlite=3.46.0=hfb93653_0
+  - libtiff=4.7.0=h91aec0a_0
+  - libuv=1.48.0=h80987f9_0
+  - libwebp-base=1.3.2=h80987f9_1
+  - libzlib=1.2.13=hfb2fe0b_6
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - lz4-c=1.9.4=h313beb8_1
+  - markdown=3.8=py310hca03da5_0
+  - markupsafe=3.0.2=py310h80987f9_0
+  - matplotlib=3.10.0=py310hca03da5_0
+  - matplotlib-base=3.10.0=py310h7ef442a_0
+  - ncurses=6.4=h313beb8_0
+  - ninja=1.12.1=hca03da5_0
+  - ninja-base=1.12.1=h48ca7d4_0
+  - numexpr=2.10.1=py310h5d9532f_0
+  - numpy=1.26.4=py310h3b2db8e_0
+  - numpy-base=1.26.4=py310ha9811e2_0
+  - openjpeg=2.5.2=hba36e21_1
+  - openssl=3.0.16=h02f6b3c_0
+  - packaging=24.2=py310hca03da5_0
+  - pandas=2.2.3=py310hcf29cfe_0
+  - pillow=11.1.0=py310h41ba818_1
+  - pip=25.1=pyhc872135_2
+  - protobuf=3.20.3=py310h313beb8_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyparsing=3.2.0=py310hca03da5_0
+  - pysocks=1.7.1=py310hca03da5_0
+  - python=3.10.9=h3ba56d0_0_cpython
+  - python-dateutil=2.9.0post0=py310hca03da5_2
+  - python-tzdata=2025.2=pyhd3eb1b0_0
+  - python_abi=3.10=7_cp310
+  - pytorch=1.13.1=cpu_py310h9a5eeca_0
+  - pytz=2024.1=py310hca03da5_0
+  - pyyaml=6.0.2=py310h80987f9_0
+  - re2=2022.04.01=hc377ac9_0
+  - readline=8.2=h1a28f6b_0
+  - requests=2.32.3=py310hca03da5_1
+  - setuptools=78.1.1=py310hca03da5_0
+  - six=1.17.0=py310hca03da5_0
+  - sleef=3.5.1=h80987f9_2
+  - sqlite=3.45.3=h80987f9_0
+  - tensorboard=2.19.0=py310hca03da5_0
+  - tensorboard-data-server=0.7.0=py310ha6e5c4f_1
+  - tk=8.6.14=h6ba3021_0
+  - torchvision=0.14.1=cpu_py310h7df52bc_0
+  - tornado=6.4.2=py310h80987f9_0
+  - tqdm=4.66.5=py310h33ce5c2_0
+  - typing-extensions=4.12.2=py310hca03da5_0
+  - typing_extensions=4.12.2=py310hca03da5_0
+  - tzdata=2025b=h04d1e81_0
+  - unicodedata2=15.1.0=py310h80987f9_1
+  - urllib3=2.3.0=py310hca03da5_0
+  - werkzeug=3.1.3=py310hca03da5_0
+  - wheel=0.45.1=py310hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - yaml=0.2.5=h1a28f6b_0
+  - zlib=1.2.13=hfb2fe0b_6
+  - zstd=1.5.6=hfb09047_0
+prefix: /opt/homebrew/Caskroom/miniconda/base/envs/attack
